@@ -46,7 +46,7 @@ print Fuse::GPL( 'menu_data.c: menu structure for Fuse',
 /* This file is autogenerated from menu_data.c by $0.
    Any changes made here will not be preserved. */
 
-#include <gtk/gtk.h>
+#include <config.h>
 
 #include "menu.h"
 
@@ -127,10 +127,7 @@ sub dump_widget ($) {
     my( $menu ) = @_;
 
     print << "HEADERS";
-#include <config.h>
-
 #include "input.h"
-#include "menu.h"
 #include "options.h"
 #include "widget_internals.h"
 
@@ -150,11 +147,11 @@ sub _dump_widget ($$) {
     my $s;
 
     if( $path eq 'menu' ) {
-	$s = 'const widget_menu_entry widget_menu[]';
+	$s = 'widget_menu_entry widget_menu[]';
     } else {
     	# Slight ugliness here is because "${path}[]" doesn't work under
 	# Perl 5.6
-	$s = "const static widget_menu_entry $path" . "[]";
+	$s = "static widget_menu_entry $path" . "[]";
     }
 
     $s .= " = {\n  { \"$menu_name\" },\n";
@@ -190,6 +187,11 @@ sub _dump_widget ($$) {
 sub dump_gtk ($) {
 
     my( $menu ) = @_;
+
+    print << "HEADERS";
+#include <gtk/gtk.h>
+
+HEADERS
 
     print "GtkItemFactoryEntry gtkui_menu_data[] = {\n\n";
 
